stockMsaStock/src/main/java/com/example/stockmsastock/common/error/ValidationMessage.java
package com.example.stockmsastock.common.error;

public interface ValidationMessage {
    String NOT_STOCK_SORT_TYPE= "스톡 sort type 에 맞지 않습니다.";
    String NOT_STOCK_SORT_ORDER= "스톡 sort order 에 맞지 않습니다.";
}
